--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><meta http-equiv="refresh" content="0; URL='public/index.html'" /></head><body></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta http-equiv="refresh" content="0; URL='public/index.html'" />
+</head>
+
+<body></body>
+
+</html>
