--- a/index.html
+++ b/index.html
@@ -107,12 +107,13 @@
       <strong>Метод:</strong> DCF<br />
       <strong>Оцінка:</strong> €1 189 028<br />
       <strong>Деталі:</strong> 10 років, зростання +5%, окупність на 7-му році
+      <strong>Окупність:</strong> 1.69× за 10 років
     </div>
 
     <div class="valuation-block">
       <strong>Метод:</strong> Мультиплікатор 10×<br />
-      <strong>Оцінка:</strong> €1 057 952<br />
-      <strong>Мультиплікатор:</strong> 5.29×
+      <strong>Exit за мультиплікатором:</strong> €1 057 952<br />
+      <strong>Окупність:</strong> 5.29×
     </div>
   </div>
 </body>
